--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-components": "5.3.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.23.10",
     "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "1.13.2",
     "eslint-config-airbnb": "18.2.1",
